# ts-legalcheck

./: Dockerfile  README.md  SECURITY.md  pyproject.toml  requirement.txt
.github/workflows/: buildnPush.yml  buildnPushDocker.yml
data/: LicenseConstraints_v3.0.json  LicenseConstraints_v3.9.json  LicenseConstraints_v4.3.json  LicenseConstraints_v4.4.json  LicenseConstraints_v4.5.toml
data/licenses/v4.4/: 0BSD.json  AGPL-3.0.json  Apache-2.0.json  BSD-3-Clause-Open-MPI.json  Elastic-2.0.json  GPL-2.0-only.json  GPL-3.0.json  LGPL-2.0-or-later.json  MIT-0.json  MIT.json  copyleft-next-0.3.0.json
data/osadl/defs/: AFL-2.0.toml  AFL-2.1.toml  AFL-3.0.toml  Apache-1.0.toml  Apache-1.1.toml  Apache-2.0.toml  Artistic-1.0-Perl.toml  Artistic-1.0.toml  Artistic-2.0.toml  BSD-1-Clause.toml  BSD-2-Clause-Patent.toml  BSD-2-Clause.toml  BSD-3-Clause-Open-MPI.toml  BSD-3-Clause.toml  BSD-4-Clause-UC.toml  BSD-4-Clause.toml  BSD-4.3TAHOE.toml  BSD-Source-Code.toml  Bitstream-Vera.toml  CC-BY-2.5.toml  CC-BY-3.0.toml  CDDL-1.0.toml  CDDL-1.1.toml  CPL-1.0.toml  ECL-1.0.toml  ECL-2.0.toml  EPL-1.0.toml  EPL-2.0.toml  EUPL-1.1.toml  EUPL-1.2.toml  FTL.toml  GPL-1.0-only.toml  GPL-1.0-or-later.toml  GPL-2.0-only%20WITH%20Classpath-exception-2.0.toml  GPL-2.0-only.toml  GPL-2.0-or-later.toml  HPND.toml  IBM-pibs.toml  ICU.toml  IJG.toml  (+53 more)
examples/: sc01_ProprietarySoftware.json
examples/osadl/: uc01.toml
src/ts_legalcheck/: cli.py  testing.py  utils.py
src/ts_legalcheck/engine/: __init__.py  context.py
src/ts_legalcheck/osadl/: __init__.py  __main__.py
(+8 files in other folders)
